Ajustar vistas donde aparecen regalos con lazy load

--- a/app/views/listas/show.html.erb
+++ b/app/views/listas/show.html.erb
@@ -96,7 +96,7 @@
 var ready;
 ready = function() {
   $("img").lazyload({
-    placeholder: "/assets/grey.gif",
+    placeholder: "grey.gif",
     effect : "fadeIn", 
     failure_limit   : 5
   });
