--- a/app/views/regalos/show.html.erb
+++ b/app/views/regalos/show.html.erb
@@ -11,7 +11,7 @@
       <div class="row">
         <div class="col-sm-4">
 
-        <%= image_tag(@regalo.imagen.normal.url) if @regalo.imagen? %>
+        <%= image_tag(@regalo.imagen.normal.url, class: "lazy") if @regalo.imagen? %>
         </div>
         <div class="col-sm-8">
           <div class="row">
@@ -70,3 +70,16 @@
 
 <%= link_to "<< Volver a lista", fiesta_lista_path(@fiesta, @lista) , class: "btn btn-primary btn-xs"%>
 </div>
+
+<script>
+var ready;
+ready = function() {
+  $("img").lazyload({
+    placeholder: "grey.gif",
+    effect : "fadeIn"
+  });
+};
+$(document).ready(ready);
+$(document).on('page:load', ready);
+</script>
+
