--- a/app/views/regalos/_controles.html.erb
+++ b/app/views/regalos/_controles.html.erb
@@ -1,16 +1,16 @@
 <% case regalo.compromiso.value %>
     <% when "disponible" %>
     <span>
-      <%= link_to "lo quiero reservar", "#", class: "btn btn-info btn-xs btn-modal", "data-toggle" => "modal", "data-target" => "#modal-regalo-#{regalo.id}", rel: "tooltip", title: "Resérvalo antes de que sea demasiado tarde." %>
+      <%= link_to "lo quiero reservar", "#", class: "btn btn-info btn-xs btn-modal", "data-toggle" => "modal", "data-target" => "#modal-regalo-#{regalo.id}", rel: "tooltip", title: "Resérvalo antes de que sea demasiado tarde.", id: " reservado" %>
     </span>
     <% when "reservado" %>
     <% if current_user == regalo.compromiso.user || policy(regalo).edit? %>
       <!-- <small>Reservado por <%= regalo.compromiso.user.name.humanize.titleize %></small> -->
     <span>
-      <%= link_to "liberarlo", fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-success btn-xs", data: {toggle: "tooltip", placement: "top"}, title: "Volverá a la lista de regalos disponibles" %>
+      <%= link_to "liberarlo", fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-success btn-xs", data: {toggle: "tooltip", placement: "top"}, title: "Volverá a la lista de regalos disponibles", id: "liberado" %>
     </span>
     <span>
-      <%= link_to "lo he comprado", fiesta_lista_regalo_comprar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-info btn-xs", data: {toggle: "tooltip", placement: "top"}, title: "Notifica al anfitrión de tu compra de manera anónima" %>
+      <%= link_to "lo he comprado", fiesta_lista_regalo_comprar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-info btn-xs comprado", data: {toggle: "tooltip", placement: "top"}, title: "Notifica al anfitrión de tu compra de manera anónima",  id: "comprado" %>
     </span>
     <% else %>
       <span>
@@ -27,7 +27,7 @@
             <small>Comprado por <%= regalo.compromiso.user.name %></small>
           </span> -->
         <span>
-        <%= link_to "liberar", fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-default btn-xs" %>
+        <%= link_to "liberar", fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-default btn-xs" ,  id: "liberado"%>
         </span>
       <% end %>
     <% end %>
