--- a/app/views/regalos/_regalo.html.erb
+++ b/app/views/regalos/_regalo.html.erb
@@ -5,7 +5,7 @@
           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 pull-left">
             <a href="" class="btn btn-default btn-modal" data-selector="<%= "modal-regalo-#{regalo.id}" %>">
               <span class="fa fa-search-plus" id="ver-modal"></span>
-            <%= image_tag(regalo.imagen.thumb.url) if regalo.imagen? %>
+            <%= image_tag(regalo.imagen.thumb.url, class: "lazy") if regalo.imagen? %>
             </a>
           </div>
           <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 pull-left">
@@ -44,7 +44,7 @@
         <div class="row">
           <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4 pull-left">
             <a href="" class="btn btn-default btn-modal" data-selector="<%= "modal-regalo-#{regalo.id}" %>">
-            <%= image_tag(regalo.imagen.thumb.url) if regalo.imagen? %>
+            <%= image_tag(regalo.imagen.thumb.url, class: "lazy") if regalo.imagen? %>
             </a>
           </div>
           <div class="col-lg-8 col-md-7 col-sm-8 col-xs-8 pull-left">
