--- a/app/views/regalos/index.html.erb
+++ b/app/views/regalos/index.html.erb
@@ -39,6 +39,7 @@ ready = function() {
     effect : "fadeIn", 
     failure_limit   : 5
   });
+  $('.btn').tooltip();
    $('#regalos').sortable({
     axis: 'y',
     update: function() {
@@ -49,6 +50,22 @@ ready = function() {
     e.preventDefault();
     var selector = "#" + $(this).attr('data-selector');
     $(selector).modal('show');
+    $('.modal').on('shown.bs.modal', function(){
+      var deferreds = [];
+      var imgs = $('.imagen', this).find('img');
+      imgs.each(function(){
+        var self = $(this);
+        var datasrc = self.attr('data-original');
+        if (datasrc) {
+          var d = $.Deferred();
+          self.one('load', d.resolve).attr("src", datasrc).attr('data-src', '');
+          deferreds.push(d.promise());
+        }
+      });
+      $.when.apply($, deferreds).done(function(){
+        $(selector).find('#ajaxloader').hide();
+      });
+    });
   });
     $(".hover").hover(function (e) {
         $(this).find('.hovsw').css('cursor', 'move');
