--- a/app/views/regalos/reservados.html.erb
+++ b/app/views/regalos/reservados.html.erb
@@ -21,3 +21,41 @@
     </div>
   </div>
 </div>
+
+<script>
+var ready;
+ready = function() {
+ $("img").lazyload({
+    placeholder: "/assets/grey.gif",
+    effect: "fadeIn", 
+    threshold: 100
+  });
+  $('.btn').tooltip();
+  $('#reservado, #liberado, #comprado').click(function(){
+    $(this).addClass('disabled');
+  });
+  $('.btn-modal').click(function(e){
+    e.preventDefault();
+    var selector = "#" + $(this).attr('data-selector');
+    $(selector).modal('show');
+    $('.modal').on('shown.bs.modal', function(){
+      var deferreds = [];
+      var imgs = $('.imagen', this).find('img');
+      imgs.each(function(){
+        var self = $(this);
+        var datasrc = self.attr('data-original');
+        if (datasrc) {
+          var d = $.Deferred();
+          self.one('load', d.resolve).attr("src", datasrc).attr('data-src', '');
+          deferreds.push(d.promise());
+        }
+      });
+      $.when.apply($, deferreds).done(function(){
+        $(selector).find('#ajaxloader').hide();
+      });
+    });
+  });
+};
+$(document).ready(ready);
+$(document).on('page:load', ready);
+</script>
