--- a/app/views/regalos/index.html.erb
+++ b/app/views/regalos/index.html.erb
@@ -34,11 +34,15 @@
 <script>
 var ready;
 ready = function() {
-  $("img").lazyload({
-    placeholder: "grey.gif",
-    effect : "fadeIn", 
-    failure_limit   : 5
+  $(".p_outer_content").each(function() {
+    var tthis = $(this);
+    $(this).find('img').lazyload({
+        container: tthis
+        placeholder: "/assets/grey.gif",
+        effect : "fadeIn"
+    });
   });
+
   $('.btn').tooltip();
    $('#regalos').sortable({
     axis: 'y',
