--- a/app/views/listas/show.html.erb
+++ b/app/views/listas/show.html.erb
@@ -90,9 +90,13 @@
 <script>
 var ready;
 ready = function() {
-  $("img").lazyload({
-    effect: "fadeIn", 
-    threshold: 100
+  $(".p_outer_content").each(function() {
+    var tthis = $(this);
+    $(this).find('img').lazyload({
+        container: tthis,
+        placeholder : "<%= asset_path 'grey.gif' %>",
+        effect : "fadeIn"
+    });
   });
   $('.btn').tooltip();
   $('#reservado, #liberado, #comprado').click(function(){
