--- a/app/views/listas/show.html.erb
+++ b/app/views/listas/show.html.erb
@@ -91,7 +91,9 @@
 var ready;
 ready = function() {
   $(".p_outer_content").each(function() {
+    var tthis = $(this);
     $('img').lazyload({
+        container: tthis,
         placeholder : "<%= asset_path 'grey.gif' %>",
         effect : "fadeIn"
     });
