--- a/app/views/layouts/_brand.html.erb
+++ b/app/views/layouts/_brand.html.erb
@@ -1,10 +1,10 @@
 <% if current_user %>
   <div class="navbar-header dropdown">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-    <span class="fa fa-book" style="font-size:30px; color:#3498db;"></span>
+    <span class="fa fa-book" style="font-size:30px; color:#16a085;"></span>
     </button>
     <%= link_to "#", class: "navbar-brand hidden-xs dropdown-toggle", data: {toggle: "dropdown"} do %>
-    <span class="fa fa-book" style="font-size:25px; color:#fff;"> La lista</span>
+    <span class="fa fa-book" style="font-size:25px; color:#16a085;"> La lista</span>
     <span class="caret"></span>
     <% end %>
     <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
