--- a/app/views/regalos/_controles.html.erb
+++ b/app/views/regalos/_controles.html.erb
@@ -1,33 +1,36 @@
 <% case regalo.compromiso.value %>
     <% when "disponible" %>
     <span>
-      <%= link_to "lo quiero reservar", "#", class: "btn btn-info btn-xs btn-modal", "data-toggle" => "modal", "data-target" => "#modal-regalo-#{regalo.id}", rel: "tooltip", title: "Resérvalo antes de que sea demasiado tarde.", id: " reservado" %>
+      <%= link_to "Lo quiero reservar", "#", class: "btn btn-info btn-md btn-modal btn-block hidden-xs", "data-toggle" => "modal", "data-target" => "#modal-regalo-#{regalo.id}", rel: "tooltip", title: "Resérvalo antes de que sea demasiado tarde.", id: " reservado" %>
+      <%= link_to "Reservar", "#", class: "btn btn-info btn-md btn-modal btn-block hidden-sm hidden-md hidden-lg", "data-toggle" => "modal", "data-target" => "#modal-regalo-#{regalo.id}", rel: "tooltip", title: "Resérvalo antes de que sea demasiado tarde.", id: " reservado" %>
     </span>
     <% when "reservado" %>
     <% if current_user == regalo.compromiso.user || policy(regalo).edit? %>
       <!-- <small>Reservado por <%= regalo.compromiso.user.name.humanize.titleize %></small> -->
     <span>
-      <%= link_to "liberarlo", fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-success btn-xs", data: {toggle: "tooltip", placement: "top"}, title: "Volverá a la lista de regalos disponibles", id: "liberado" %>
+      <%= link_to "Notificar compra", fiesta_lista_regalo_comprar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-info btn-md btn-block hidden-xs", data: {toggle: "tooltip", placement: "top"}, title: "Notifica al anfitrión de tu compra de manera anónima",  id: "comprado" %>
+      <%= link_to "Notificar", fiesta_lista_regalo_comprar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-info btn-md btn-block visible-xs", data: {toggle: "tooltip", placement: "top"}, title: "Notifica al anfitrión de tu compra de manera anónima",  id: "comprado" %>
     </span>
     <span>
-      <%= link_to "lo he comprado", fiesta_lista_regalo_comprar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-info btn-xs comprado", data: {toggle: "tooltip", placement: "top"}, title: "Notifica al anfitrión de tu compra de manera anónima",  id: "comprado" %>
+      <%= link_to "Liberarlo", fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-success btn-md", data: {toggle: "tooltip", placement: "top"}, title: "Volverá a la lista de regalos disponibles", id: "liberado" %>
     </span>
     <% else %>
       <span>
-        <%= link_to "regalo reservado", "", class: "btn btn-default btn-xs disabled" %>
+        <%= link_to "Regalo reservado", "", class: "btn btn-default btn-block btn-md disabled hidden-xs" %>
+         <%= link_to "Reservado", "", class: "btn btn-default btn-block btn-md disabled visible-xs" %>
         <br>
       </span>
     <% end %>
     <% when "comprado" %>
       <span>
-      <%= link_to "regalo comprado", "", class: "btn btn-success btn-xs disabled" %>
+      <%= link_to "Comprado", "", class: "btn btn-success btn-md btn-block disabled" %>
       </span>
       <% if policy(regalo).edit? %>
           <!-- <span>
             <small>Comprado por <%= regalo.compromiso.user.name %></small>
           </span> -->
         <span>
-        <%= link_to "liberar", fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-default btn-xs" ,  id: "liberado"%>
+        <%= link_to "liberar", fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-default btn-md" ,  id: "liberado"%>
         </span>
       <% end %>
     <% end %>
