Añadir clear fix

--- a/app/views/regalos/_regalo.html.erb
+++ b/app/views/regalos/_regalo.html.erb
@@ -44,6 +44,7 @@
         </div>
       </div><!-- /caption-->
     </div>
+    <div class="clearfix"></div>
   </div><!-- /item -->
 
 <!-- modal begins -->
