Quitar descripcion del layout

--- a/app/views/regalos/_regalo.html.erb
+++ b/app/views/regalos/_regalo.html.erb
@@ -9,7 +9,7 @@
       <div class="caption">
         <h4 class="group inner list-group-item-heading"><%= link_to regalo.titulo.to_s.humanize.titleize , [regalo.lista.fiesta, regalo.lista, regalo]%></h4>
         <p class="group inner list-group-item-text">
-          <%= simple_format(regalo.descripcion) %>
+          <%# simple_format(regalo.descripcion) %>
         </p>
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
